@@ -125,20 +125,23 @@ opt_section(struct bu_vls *msg, int argc, const char **argv, void *set_var)
 HIDDEN char *
 find_man_file(const char *man_name, const char *lang, char section, int gui)
 {
+    const char *ddir;
     char *ret = NULL;
     struct bu_vls data_dir = BU_VLS_INIT_ZERO;
     struct bu_vls file_ext = BU_VLS_INIT_ZERO;
     struct bu_vls mfile = BU_VLS_INIT_ZERO;
     if (gui) {
 	bu_vls_sprintf(&file_ext, "html");
-	bu_vls_sprintf(&data_dir, "%s/html", bu_brlcad_root(bu_brlcad_dir("doc", 1), 1));
+	ddir = bu_dir(NULL, 0, BU_DIR_DOC, "html", NULL);
+	bu_vls_sprintf(&data_dir, "%s", ddir);
     } else {
 	if (section != 'n') {
 	    bu_vls_sprintf(&file_ext, "%c", section);
 	} else {
 	    bu_vls_sprintf(&file_ext, "nged");
 	}
-	bu_vls_sprintf(&data_dir, "%s", bu_brlcad_root(bu_brlcad_dir("man", 1), 1));
+	ddir = bu_dir(NULL, 0, BU_DIR_MAN, NULL);
+	bu_vls_sprintf(&data_dir, "%s", ddir);
     }
     bu_vls_sprintf(&mfile, "%s/%s/man%c/%s.%s", bu_vls_addr(&data_dir), lang, section, man_name, bu_vls_addr(&file_ext));
     if (bu_file_exists(bu_vls_addr(&mfile), NULL)) {
